--- a/charts/webapp/templates/pg-secret.yaml
+++ b/charts/webapp/templates/pg-secret.yaml
@@ -1,9 +1,6 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: pg-credentials
-  namespace: app
-type: Opaque
-stringData:
-  username: appuser
-  password: appsecret
+apiVersion: v2
+name: webapp
+description: Simple Node.js webapp with CloudNativePG backend
+type: application
+version: 0.1.0
+appVersion: "1.0"
